c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_parse/invalid_type_specifier.c
int main(void) {
    /* "Unsigned double" is not a valid type specifier */
    unsigned double d = 10.0;
    return 0;
}